fixed IE/Edge layout issues + fixed Firefox select button style + added style helpers + replaced unsupported CSS variables + fixed some text

--- a/embc-app/ClientApp/src/app/shared/components/communities-select/communities-select.component.scss
+++ b/embc-app/ClientApp/src/app/shared/components/communities-select/communities-select.component.scss
@@ -1,3 +1,5 @@
+@import "~src/styles/_defaults.scss";
+
 // allow list to scroll
 ::ng-deep ngb-typeahead-window {
   overflow-y: auto;
@@ -5,7 +7,7 @@
 }
 
 :host.is-invalid input {
-  border-color: var(--danger);
+  border-color: $danger;
 }
 
 div {
