--- a/embc-app/ClientApp/src/styles/_defaults.scss
+++ b/embc-app/ClientApp/src/styles/_defaults.scss
@@ -1,6 +1,7 @@
 // Colors
 $gold: #fcba19;
 $white: #fff;
+$danger: #dc3545;
 
 // Background Colors
 $bg-dark: #003366;
